# hindsight

./: .gitignore  README.md  docker-compose.yml  start.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_subject_references.py  0003_text_columns_unbounded.py  0004_transcript_bge_and_tsvector.py  0005_captions_bge_and_tsvector.py
backend/app/: config.py  database.py  main.py
backend/app/agent/: audit.py  concurrency.py  embed.py  farthest_point.py  orchestrator.py  schemas.py  skill_eval.py  skill_router.py  sse_bus.py
backend/app/agent/skills/: ask-vision-protocol.md  communication-style.md  composition-patterns.md  confirmation-ux.md  evidentiary-language.md  investigation-strategy.md  negative-result-handling.md  open-vocab-prompting.md  re-ranking-protocol.md  result-synthesis.md  spatial-reasoning.md  subject-registration-protocol.md  temporal-reasoning.md  tool-result-budgeting.md
backend/app/agent/tools/: __init__.py  _utils.py  activity_search.py  ask_vision.py  audio_search.py  caption_frames.py  caption_search.py  co_presence.py  confirmation.py  detection_query.py  frames_around_transcript.py  image_search.py  instance_search.py  ocr_search.py  open_vocab_detect.py  reranking.py  scene_assembly.py  subjects.py  temporal_cluster.py  transcript_for_subject.py  video_clip.py  visual_search.py
backend/app/api/: collections.py  frames.py  ingest.py  investigations.py  schemas.py  stream.py  videos.py
backend/app/models/: __init__.py  agent.py  detection.py  subject.py  video.py
backend/app/worker/: celery_app.py  db.py  ml.py  util.py
backend/app/worker/tasks/: caption.py  detect_track.py  embed_box.py  embed_global.py  frames.py  ingest.py  ocr.py  shots.py  transcribe.py
backend/scripts/: backfill_caption_embeddings.py  backfill_transcript_embeddings.py  kill_jobs.sh  smoke_tools.py  warm_models.py
docs/: code-audit-2026-04-28.md  code-audit-2026-04-29.md  pipeline-optimisation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  collections.ts  investigations.ts  stream.ts  types.ts
frontend/src/components/: ChatMessage.tsx  FrameGrid.tsx  InstanceGallery.tsx  SubjectChip.tsx  TimelineBar.tsx  ToolCallBadge.tsx  VideoModal.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  GlassCard.tsx
frontend/src/hooks/: useAgentStream.ts
frontend/src/store/: investigationStore.ts
frontend/src/views/: Collections.tsx  Dashboard.tsx  Ingest.tsx  Investigate.tsx
scripts/: full_reset.sh  retry_errored.sh
